--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+        Hello world
+    </h1>
+    <h2>
+        тут я создам список 
+    </h2>
+    <ul>
+        <li>
+            1 елемент   
+        </li>
+        <li>
+            2 елемент
+        </li>
+    </ul>
 </body>
 </html>
